--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,30 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <style media="screen">
+        body {
+            background: rgb(254,255,255); /* Old browsers */
+            background: -moz-radial-gradient(center, ellipse cover,  rgb(254,255,255) 0%, rgb(240,240,240) 100%); /* FF3.6-15 */
+            background: -webkit-radial-gradient(center, ellipse cover,  rgb(254,255,255) 0%,rgb(240,240,240) 100%); /* Chrome10-25,Safari5.1-6 */
+            background: radial-gradient(ellipse at center,  rgb(254,255,255) 0%,rgb(240,240,240) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#f0f0f0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+        }
+        .card-line {
+            border-bottom: 1px solid rgba(0,0,0,.125);
+        }
+        .container-row {
+            min-height: 50rem;
+        }
+        .card {
+            min-width: 100%;
+            -webkit-box-shadow: 0px 0px 100px 0px rgba(207,207,207,1);
+            -moz-box-shadow: 0px 0px 100px 0px rgba(207,207,207,1);
+            box-shadow: 0px 0px 100px 0px rgba(207,207,207,1);
+        }
+    </style>
   </head>
   <body>
     {% block content %}{% endblock %}
