--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,10 @@
             border-bottom: 1px solid rgba(0,0,0,.125);
         }
         .container-row {
-            min-height: 50rem;
+            min-height: 100% !important;
         }
         .card {
+            margin-top: 100px;
             min-width: 100%;
             -webkit-box-shadow: 0px 0px 100px 0px rgba(207,207,207,1);
             -moz-box-shadow: 0px 0px 100px 0px rgba(207,207,207,1);
@@ -37,5 +38,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"></script>
+    {% block js %}{% endblock %}
   </body>
 </html>
