--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -12,7 +12,7 @@
         <div class="col-6 align-self-center">
             <div class="card animated zoomIn">
                 <div class="card-block card-line text-center" style="background-color:aliceblue;border-top-left-radius:3px;border-top-right-radius:3px">
-                    <h4 class="card-title">{{ transaction.project.name }}</h4>
+                    {# <h4 class="card-title">{{ transaction.project.name }}</h4>#}
                     <div class="card-text">
                         <a href="{{ transaction.site.domain }}">{{ transaction.site.domain }}</a>
                     </div>
