--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -10,6 +10,7 @@
 <div class="container">
     <div class="container-row row justify-content-center">
         <div class="col-6 align-self-center">
+            <form action="" method="post">{% csrf_token %}
             <div class="card animated zoomIn">
                 <div class="card-block card-line text-center" style="background-color:aliceblue;border-top-left-radius:3px;border-top-right-radius:3px">
                     {# <h4 class="card-title">{{ transaction.project.name }}</h4>#}
@@ -22,12 +23,11 @@
                 </div>
                 <div class="card-block card-line" style="padding-top:10px;padding-bottom:0">
                     <div class="card-text">
-                        <form class="" action="" method="post">{% csrf_token %}
                             <div class="form-group row" style="padding-top:10px;padding-bottom:0;margin:0">
                                 <label for="" class="col-4 col-form-label">{% trans "Amount to pay:" %}</label>
                                 <div class="col-8">
                                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                        <input type="text" name="name" value="{{ transaction.amount_usd }}" class="form-control usd">
+                                        <input type="text" name="{{ form.amount_usd.html_name }}" value="{{ transaction.amount_usd }}" class="form-control usd">
                                         <div class="input-group-addon">USD</div>
                                     </div>
                                 </div>
@@ -36,12 +36,11 @@
                                 <label for="" class="col-4 col-form-label"></label>
                                 <div class="col-8">
                                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                        <input type="text" name="name" value="{{ transaction.amount_btc }}" class="form-control btc" disabled>
+                                        <input type="text" name="btc" value="{{ transaction.amount_btc|default_if_none:"" }}" class="form-control btc" disabled>
                                         <div class="input-group-addon">BTC</div>
                                     </div>
                                 </div>
                             </div>
-                        </form>
                     </div>
                 </div>
                 <div class="card-block" style="padding-top:10px;padding-bottom:0">
@@ -54,19 +53,29 @@
                         <div class="row form-group">
                             <label for="" class="col-sm-12 col-md-4 col-form-label">{% trans "Email" %}</label>
                             <div class="col-sm-12 col-md-8">
-                                <input type="text" name="name" value="{{ transaction.email }}" class="form-control">
+                                <input type="text" name="{{ form.email.html_name }}" value="{{ transaction.email }}" class="form-control">
                             </div>
                         </div>
                         <div class="row form-group">
                             <label for="" class="col-sm-12 col-md-4 col-form-label">{% trans "Project code" %}</label>
                             <div class="col-sm-12 col-md-8">
-                                <input type="text" name="name" value="{{ transaction.project.code.hex }}" class="form-control">
+                                <input type="text" name="{{ form.project_code.html_name }}" value="{{ transaction.project_code.hex }}" class="form-control" disabled>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-block card-line">
+                <div class="card-block card-line" style="padding-top:10px;padding-bottom:10px;">
                     <div class="card-text">
+                        <div class="row">
+                            <div class="col-12">
+                                {% trans "Send from:" %}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <input type="text" name="{{ form.from_address.html_name }}" value="{{ transaction.from_address|default_if_none:"" }}" class="form-control">
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-12">
                                 {% trans "Send exactly" %} <b><span class="btc-exact">{{ transaction.amount_btc|default_if_none:"" }}</span> BTC</b> to this address:
@@ -74,17 +83,23 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <input type="text" name="name" value="{{ transaction.to_address|default_if_none:"" }}" class="form-control">
+                                <input type="text" name="{{ form.to_address.html_name }}" value="{{ transaction.to_address|default_if_none:"" }}" class="form-control">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="card-block" style="padding-top:10px;padding-bottom:10px">
                     <div class="card-text text-center">
-                        <button type="button" class="btn btn-primary" disabled>{% trans "Make Payment" %}</button>
+                        {{ form.errors }}
+                    </div>
+                </div>
+                <div class="card-block" style="padding-top:10px;padding-bottom:10px">
+                    <div class="card-text text-center">
+                        <button type="submit" class="btn btn-success payment-button" disabled>{% trans "Make Payment" %}</button>
                     </div>
                 </div>
             </div>
+            </form>
         </div>
     </div>
 </div>
@@ -120,10 +135,34 @@
                 request.send()
             }
 
+            // rates update
             rate()
             usd.on('keyup', function() {
                 btc.val(usd.val()/rate())
                 btcExact.val(usd.val()/rate())
+            })
+
+            // payment button enabled
+            var inputs = $('input')
+            var paymentBtn = $('.payment-button')
+            var paymentBtnActivate = function() {
+                var activate = true;
+                Array.prototype.forEach.call(inputs, function(input) {
+                    if (input.name != 'btc' && input.value.length == 0) {
+                        console.log(input.name)
+                        activate = false
+                    }
+                })
+                return activate
+            }
+            Array.prototype.forEach.call(inputs, function(input) {
+                $(input).on('keyup', function(event) {
+                    if (paymentBtnActivate()) {
+                        paymentBtn.removeAttr('disabled')
+                    } else {
+                        paymentBtn.attr('disabled', 'disabled')
+                    }
+                })
             })
         })
     })();
