fix transaction.html endpoint

--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -156,7 +156,7 @@
             var N = 10000
             var statusMsg = $('.msg')
             setInterval(function() {
-                var endpoint = '{% url 'transaction_status_api' %}'
+                var endpoint = '{% url 'transaction_status_api' %}?id={{ transaction.id }}'
 
                 var request = new XMLHttpRequest();
                 request.open('GET', endpoint, true);
