transaction.html: use 12px font for transaction status

--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="card-block" style="padding-top:10px;padding-bottom:10px;border-bottom-left-radius:3px;border-bottom-right-radius:3px;background-color:aliceblue">
-                    <div class="card-text text-center msg">
+                    <div class="card-text text-center msg" style="font-size:12px">
                         {% if transaction.amount_btc > transaction.amount_paid %}
                             {% trans "Awaiting Payment" %}
                         {% else %}
