--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -25,7 +25,7 @@
                                 <label for="" class="col-4 col-form-label">{% trans "Amount to pay:" %}</label>
                                 <div class="col-8">
                                     <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                        <input type="number" name="{{ form.amount_usd.html_name }}" value="{{ transaction.amount_usd|default_if_none:"0" }}" class="form-control usd">
+                                        <input type="number" name="{{ form.amount_usd.html_name }}" value="{{ transaction.amount_usd|default_if_none:"" }}" class="form-control usd">
                                         <div class="input-group-addon">USD</div>
                                     </div>
                                 </div>
@@ -118,7 +118,7 @@
                   if (this.status >= 200 && this.status < 400) {
                     var data = JSON.parse(this.response);
                     var rawRate = usd.val()/data.rate
-                    if (usd.val() === "0") {
+                    if (usd.val() === "") {
                         usd.val(btc.prop("defaultValue") * data.rate)
                         btc.val(btc.prop("defaultValue"))
                     }
@@ -132,7 +132,7 @@
             }
 
             // rates update
-            rate()
+            {# rate() #}
             usd.on('keyup', function() {
                 rate()
             })
